# cks-lite

./: .gitignore  LICENSE  QUICKSTART.md  QUICK_START.md  README.md  STATUS.md  init-project.bat  init-project.sh
.github/: pull_request_template.md
agent-sdk/: .env.example  README.md  check_auth_header.py  check_db.py  check_status.py  main.py  minimax_client.py  requirements.txt  start_server.bat  test_alex_complete.py  test_api.py  test_auth.py  test_chat_quick.py  test_demo.py  test_hybrid_search.py  test_intelligent_memory.py  test_markdown_memory.py  test_memory_integration.py  test_memory_integration_full.py  test_memory_recall.py  test_minimax_api.py  test_minimax_raw.py  test_name.py  test_search.py  test_simple.py
desktop-app/: .gitignore  APPLE_REDESIGN.md  FRONTEND_REDESIGN.md  PHASE1_COMPLETE.md  PHASE1_REVIEW.md  PHASE2_COMPLETE.md  PHASE2_PROGRESS.md  PHASE2_VERIFICATION.md  PHASE3_COMPLETE.md  PHASE3_VERIFICATION.md  PHASE4_COMPLETE.md  PHASE4_VERIFICATION.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: lib.rs  main.rs
docs/: agent-sdk-skills-audit-api.md  clear-memory-feature.md  demo-runbook.md  demo-sop.md  desktop-release-pipeline.md  fix-report-2026-02-05.md  goals-api-v1.md  goodable-integration.md  hybrid-memory-todo.md  implementation-checklist-feishu-computer-use.md  memory-system.md  (+19 more)
(+126 files in other folders)
